# CryptoCom-TradeBot

./: .gitignore  LICENCE  README.md  config_template.yaml  info.txt  pyproject.toml
cdc_trader/: api_signature_generator.py  calcul.py  classes.py  crypto_conversion_graph.py  data_backtesting.py  data_puller.py  data_trading_logic.py  data_vizualiser.py  env.py  examples.py  financial_calculations.py  functions.py  graph.py  main.py  telegram.py  telegram_notifier.py  thinker.py  trader.py  trading_api_client.py  trading_bot_main.py  trading_classes.py  trading_config_loader.py  trading_logger.py  trading_sequence_generator.py
cdc_trader/api/: cdc_api.py
cdc_trader/backtest/: historical_backtesting.py  realtime_backtesting.py
cdc_trader/classes/: account.py  order.py  trade.py
cdc_trader/config/: config_loader.py
cdc_trader/examples/: examples.py
cdc_trader/telegram/: telegram_bot.py
cdc_trader/trader/: main.py  technical_indicators.py  trading_logic.py
cdc_trader/utils/: api_signature_generator.py  calculation_helpers.py  csv_utils.py  data_puller.py  technical_analysis.py  trading_logger.py  trading_sequence_generator.py
cdc_trader/visualizer/: csv_data_vizualiser.py
data/1INCH_USDT/: 1INCH_USDT_12h_candles_2024-02-28_00-16-45.csv  1INCH_USDT_15m_candles_2024-02-28_00-16-45.csv  1INCH_USDT_1h_candles_2024-02-28_00-16-45.csv  1INCH_USDT_1m_candles_2024-02-28_00-16-45.csv  1INCH_USDT_30m_candles_2024-02-28_00-16-45.csv  1INCH_USDT_4h_candles_2024-02-28_00-16-45.csv  1INCH_USDT_5m_candles_2024-02-28_00-16-45.csv  (+1 more)
logs/: bot.txt
(+1343 files in other folders)
